<resources>
    <string name="app_name">WidgetProperties</string>
    <string name="but_str1">Click Button</string>
    <string name="but_str2">버튼 1</string>
    <string name="but_str3">버튼 2</string>
    <string name="text1">Text Size</string>
    <string name="text2">Text Color</string>
    <string name="text3">Text Type</string>
    <string name="text4">Text Style</string>
    <string name="text5">Text Sigle Line Text Sigle Line Text Sigle Text Sigle Line </string>
</resources>
